<resources>
    <string name="app_name">" CurrencyConverter"</string>
    <string name="information">About Currency Converter</string>
    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>

    <string name="menu_item_Converter">Converter</string>
    <string name="menu_item_Saved">Saved</string>
    <string name="menu_item_Style">Style</string>
    <string name="menu_item_setting">Settings</string>
    <string name="menu_item_tabs">TAbs</string>
    <string name="menu_item_information">Information</string>

    <string name="tv_buy">BUY</string>
    <string name="tv_sell">SELL</string>
    <string name="tv_rub">RUB</string>
    <string name="tv_eur">EUR</string>
    <string name="tv_usd">USD</string>
    <string name="tv_date">Date: </string>

</resources>
